<resources>
    <string name="app_name">泡陌</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_near">附近</string>
    <string name="main_tab_order">订单</string>
    <string name="main_tab_personal">我的</string>
    <string name="main_exit_message">再按一次退出</string>
    <string name="loginhome_signin">登录</string>
    <string name="login_signin_text">登录</string>
    <string name="signin_login">Login ..</string>
</resources>
